<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<item
    android:id="@+id/nav_agro_news"
    android:icon="@drawable/ic_news"
    android:title="@string/nav_agro_news" />
<item
    android:id="@+id/nav_daily_vegetable_market"
    android:icon="@drawable/ic_money"
    android:title="@string/nav_daily_vegetable_market" />
<item
    android:id="@+id/nav_about_us"
    android:icon="@drawable/ic_info"
    android:title="@string/nav_about_us" />
<item
    android:id="@+id/nav_share_app"
    android:icon="@drawable/ic_share"
    android:title="@string/nav_share_app" />
<item
    android:id="@+id/nav_login"
    android:icon="@drawable/ic_login"
    android:title="@string/nav_login" />
<item
    android:id="@+id/nav_logout"
    android:icon="@drawable/ic_login"
    android:title="@string/nav_logout" />

</menu>