<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.thebigoceaan.smartagriculture.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_connect"
        android:name="com.thebigoceaan.smartagriculture.ui.connect.ConnectFragment"
        android:label="@string/title_connect"
        tools:layout="@layout/fragment_connect" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.thebigoceaan.smartagriculture.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.thebigoceaan.smartagriculture.ui.more.MoreFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>