<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splashColor"
    android:orientation="vertical"
    tools:context=".ui.account.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#C8BFBF"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profileImageAccount"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="160dp"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="160dp"
                android:layout_marginRight="160dp"
                android:background="@drawable/customborder"
                android:contentDescription="@string/profile_image_desc"
                android:src="@drawable/search" />

            <TextView
                android:id="@+id/usernameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/username"
                android:textColor="#323131"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/email"
                android:textColor="#272525"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_logout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="80dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/customborder"
                android:hapticFeedbackEnabled="true"
                android:text="@string/logout"
                android:textColor="#DDD8D8"
                app:backgroundTint="#6E6666" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/splashColor"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_privacy"
                android:text="@string/btn_privacy_policy"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorAccount" />

            <Button
                android:id="@+id/btn_about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_info"
                android:text="@string/about_us"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorAccount" />

            <Button
                android:id="@+id/btn_share_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_share"
                android:text="@string/share_app"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorAccount" />

            <Button
                android:id="@+id/btn_rate_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_rate"
                android:text="@string/rate_us"
                android:textColor="@color/white"
                app:backgroundTint="@color/colorAccount" />

            <TextView
                android:id="@+id/app_version_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/cuprum_regular"
                android:text="Version"
                android:textColor="#FFF8F8"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>