<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/customborder"
        app:cardBackgroundColor="@color/light_white_back">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/otp_confirmation_dialog"
                android:textColor="@color/dark_grey"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/getOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/customborder2"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:hint="@string/enter_otp"
                android:textColor="@color/dark_grey"
                android:textColorHint="#B1A3A3"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/otp_verify_btn"
                android:backgroundTint="@color/dark_grey"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/register_as_farmer"
                android:textColor="@color/lightWhite" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>