<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightWhite"
    tools:context=".services.products.ProductDetailsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/bg_smart_agriculture"
            android:contentDescription="@string/image_description"
            android:orientation="vertical"
            android:scaleType="fitXY">

        </ImageView>

        <TextView
            android:id="@+id/product_details_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/cuprum_bold"
            android:text="@string/product_price"
            android:textColor="@color/darkGreen"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/product_title_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/cuprum_bold"
            android:gravity="center"
            android:text="@string/product_title"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/product_description_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/cuprum_regular"
            android:text="@string/image_description"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="#3C3636" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/cuprum_bold"
            android:text="Seller Information : "
            android:textColor="#3E3636"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>


</ScrollView>